--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "catatan-pendapatan-toko",
   "version": "1.0.0",
@@ -8,7 +9,6 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6"
+    "express": "^4.18.2"
   }
 }
